// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Radio matches snapshot for inline: inline mount 1`] = `
.glamor-0,
[data-glamor-0] {
  position: absolute;
  cursor: pointer;
  left: 0;
  top: 0;
  width: 38px;
  height: 38px;
  z-index: 1;
  margin: 0;
  zoom: 1;
  opacity: 0;
}

.glamor-0:checked + span::after,
[data-glamor-0]:checked + span::after {
  opacity: 1;
}

.glamor-0:focus + span::before,
[data-glamor-0]:focus + span::before {
  box-shadow: 0 0 0 4px #ffbf47;
}

.glamor-1,
[data-glamor-1] {
  font-family: "nta", Arial, sans-serif;
  font-weight: 400;
  text-transform: none;
  font-size: 16px;
  line-height: 1.25;
  cursor: pointer;
  padding: 8px 10px 9px 12px;
  display: block;
}

.glamor-1:before,
[data-glamor-1]:before {
  content: " ";
  box-sizing: border-box;
  position: absolute;
  top: 0;
  left: 0;
  width: 2.10526em;
  height: 2.10526em;
  border: 2px solid black;
  border-radius: 50%;
  background: transparent;
}

.glamor-1:after,
[data-glamor-1]:after {
  content: " ";
  position: absolute;
  top: 0.52632em;
  left: 0.52632em;
  width: 0;
  height: 0;
  border: 0.52632em solid;
  border-radius: 50%;
  opacity: 0;
}

.glamor-2,
[data-glamor-2] {
  display: block;
  position: relative;
  padding: 0 0 0 38px;
  float: left;
  clear: none;
  margin-right: 30px;
  margin-bottom: 0px;
}

<Radio
  inline={true}
  name="example"
>
  <glamorous(label)
    inline={true}
  >
    <label
      className="glamor-2"
    >
      <glamorous(input)
        name="example"
        type="radio"
      >
        <input
          className="glamor-0"
          name="example"
          type="radio"
        />
      </glamorous(input)>
      <glamorous(span)>
        <span
          className="glamor-1"
        >
          example
        </span>
      </glamorous(span)>
    </label>
  </glamorous(label)>
</Radio>
`;

exports[`Radio matches snapshot: standard mount 1`] = `
.glamor-2,
[data-glamor-2] {
  display: block;
  position: relative;
  padding: 0 0 0 38px;
  margin-right: 0px;
}

.glamor-0,
[data-glamor-0] {
  position: absolute;
  cursor: pointer;
  left: 0;
  top: 0;
  width: 38px;
  height: 38px;
  z-index: 1;
  margin: 0;
  zoom: 1;
  opacity: 0;
}

.glamor-0:checked + span::after,
[data-glamor-0]:checked + span::after {
  opacity: 1;
}

.glamor-0:focus + span::before,
[data-glamor-0]:focus + span::before {
  box-shadow: 0 0 0 4px #ffbf47;
}

.glamor-1,
[data-glamor-1] {
  font-family: "nta", Arial, sans-serif;
  font-weight: 400;
  text-transform: none;
  font-size: 16px;
  line-height: 1.25;
  cursor: pointer;
  padding: 8px 10px 9px 12px;
  display: block;
}

.glamor-1:before,
[data-glamor-1]:before {
  content: " ";
  box-sizing: border-box;
  position: absolute;
  top: 0;
  left: 0;
  width: 2.10526em;
  height: 2.10526em;
  border: 2px solid black;
  border-radius: 50%;
  background: transparent;
}

.glamor-1:after,
[data-glamor-1]:after {
  content: " ";
  position: absolute;
  top: 0.52632em;
  left: 0.52632em;
  width: 0;
  height: 0;
  border: 0.52632em solid;
  border-radius: 50%;
  opacity: 0;
}

<Radio
  name="example"
>
  <glamorous(label)>
    <label
      className="glamor-2"
    >
      <glamorous(input)
        name="example"
        type="radio"
      >
        <input
          className="glamor-0"
          name="example"
          type="radio"
        />
      </glamorous(input)>
      <glamorous(span)>
        <span
          className="glamor-1"
        >
          example
        </span>
      </glamorous(span)>
    </label>
  </glamorous(label)>
</Radio>
`;
